--- a/canvasCalendar.html
+++ b/canvasCalendar.html
@@ -10,21 +10,21 @@
 
     <div class="date-selection">
       <select id="month">
-        <option>January</option>
-        <option>February</option>
-        <option>March</option>
-        <option>April</option>
-        <option>May</option>
-        <option>June</option>
-        <option>July</option>
-        <option>August</option>
-        <option>September</option>
-        <option>October</option>
-        <option>November</option>
-        <option>December</option>
+        <option value="0">January</option>
+        <option value="1">February</option>
+        <option value="2">March</option>
+        <option value="3">April</option>
+        <option value="4">May</option>
+        <option value="5">June</option>
+        <option value="6">July</option>
+        <option value="7">August</option>
+        <option value="8">September</option>
+        <option value="9">October</option>
+        <option value="10">November</option>
+        <option value="11">December</option>
       </select>
       
-      <input type="text" value="2013" size="1" id="year" />
+      <input type="text" value="" size="1" id="year" />
     </div>
     <section>
       <canvas id="calendar" width="750" height="645">
